[PostVersions] Fix source overflow in Firefox

--- a/app/javascript/src/styles/specific/post_versions.scss
+++ b/app/javascript/src/styles/specific/post_versions.scss
@@ -157,6 +157,10 @@ div#c-post-versions {
       grid-row: 4;
       @include grid-col(10, 14);
       overflow-wrap: anywhere;
+
+      .diff-list {
+        display: block;
+      }
     }
 
     .pv-actions {
